<resources>
    <string name="app_name">SuperApp</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">REGISTER</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="click_to_login">click_to_login</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="logout">logout</string>
    <string name="welcome_to_super_fun_app">Welcome to Super Fun App</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="super_fun_app">Super Fun App</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_a_user_login_here">Already a user? Login Here</string>
</resources>